# pat

./: .flake8  .gitignore  AGENTS.md  LEARNINGS.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
plans/: implementation-plan.md
src/pat/: __init__.py  _lint.py  _migrate.py  cli.py  config.py  db.py  io.py  models.py  repository.py
tests/: conftest.py  test_cli.py  test_io.py  test_models.py  test_repository.py
tests/st/: sample_portfolio.csv  sample_portfolio.json
