[project]
name = "pat"
version = "0.1.0"
description = ""
authors = [
    {name = "Roy T. Fielding",email = "fielding@gbiv.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "pat", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
